# resonance-audio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh
resonance_audio/: CMakeLists.txt
resonance_audio/ambisonics/: ambisonic_binaural_decoder.cc  ambisonic_binaural_decoder_test.cc  ambisonic_codec_impl_test.cc  ambisonic_lookup_table.cc  ambisonic_lookup_table_test.cc  associated_legendre_polynomials_generator_test.cc  foa_rotator_test.cc  hoa_rotator.cc  hoa_rotator_test.cc  stereo_from_soundfield_converter_test.cc  utils_test.cc
resonance_audio/api/: binaural_surround_renderer.h  resonance_audio_api.h
resonance_audio/base/: aligned_allocator.h  aligned_allocator_test.cc  audio_buffer.cc  audio_buffer.h  audio_buffer_test.cc  channel_view_test.cc  constants_and_types.h  integral_types.h  misc_math_test.cc  simd_utils.cc  simd_utils_test.cc  spherical_angle_test.cc
resonance_audio/dsp/: biquad_filter.h  biquad_filter_test.cc  channel_converter_test.cc  circular_buffer_test.cc  delay_filter.cc  delay_filter_test.cc  distance_attenuation_test.cc  fft_manager.cc  fft_manager_test.cc  filter_coefficient_generators_test.cc  fir_filter_test.cc  gain_mixer_test.cc  gain_processor_test.cc  gain_test.cc  mixer_test.cc  mono_pole_filter.cc  mono_pole_filter_test.cc  multi_channel_iir.cc  multi_channel_iir_test.cc  occlusion_calculator_test.cc  partitioned_fft_filter.cc  partitioned_fft_filter_test.cc  reflections_processor_test.cc  resampler_test.cc  shoe_box_room_test.cc  spectral_reverb.cc  spectral_reverb_test.cc  stereo_panner_test.cc  utils.cc  utils_test.cc
resonance_audio/geometrical_acoustics/: acoustic_ray_test.cc  acoustic_source_test.cc  collection_kernel_test.cc  estimating_rt60_test.cc  impulse_response_computer_test.cc  parallel_for_test.cc  path_tracer.cc  path_tracer_test.cc  proxy_room_estimator_test.cc  reflection_kernel_test.cc  scene_manager.cc  scene_manager_test.cc  sphere_test.cc  test_util.cc
resonance_audio/graph/: ambisonic_binaural_decoder_node.cc  ambisonic_mixing_encoder_node.cc  ambisonic_mixing_encoder_node_test.cc  binaural_surround_renderer_impl.cc  binaural_surround_renderer_impl.h  binaural_surround_renderer_impl_test.cc  foa_rotator_node.cc  gain_mixer_node.cc  gain_mixer_node_test.cc  gain_node.cc  gain_node_test.cc  graph_manager.cc  hoa_rotator_node.cc  mixer_node.cc  mixer_node_test.cc  mono_from_soundfield_node.cc  near_field_effect_node.cc  near_field_effect_node_test.cc  occlusion_node_test.cc  reflections_node.cc  resonance_audio_api_impl.cc  reverb_node.cc  source_parameters_manager_test.cc  stereo_mixing_panner_node.cc
resonance_audio/node/: audio_nodes_test.cc  node_test.cc
resonance_audio/utils/: buffer_crossfader_test.cc  buffer_partitioner_test.cc  buffer_unpartitioner_test.cc  lockless_task_queue_test.cc  planar_interleaved_conversion_test.cc  pseudoinverse.h  pseudoinverse_test.cc  sample_type_conversion.h  sample_type_conversion_test.cc  semi_lockless_fifo.h  sum_and_difference_processor.cc  sum_and_difference_processor_test.cc  task_thread_pool.cc  task_thread_pool_test.cc  test_util.cc  test_util_test.cc  threadsafe_fifo.h  vorbis_stream_encoder.cc
